# j2kcodec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.txt  README.md  main.cpp
include/: j2kcodec.h  jpeg2000reader.h  openjpegwrapper.h  simplej2kcodec.h
src/: j2kcodec.cpp  jpeg2000reader.cpp  openjpegwrapper.cpp  simplej2kcodec.cpp
test/: decode.cpp  extract_json_from_jp2.cpp  extract_json_from_jp2_rec  extract_json_from_jp2_rec.cpp
